# mcp

./: .devcontainer.json  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  logs.txt  openapi.json  pyproject.toml  test_error.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/chatmodes/: coder.chatmode.md  duploctl.chatmode.md  implementation-plan.chatmode.md  research.chatmode.md  workspace.chatmode.md
.github/instructions/: py.instructions.md
.github/reports/: cli-implementation-1.plan.md  feature-hello-world-mcp-server-1.0.plan.md  mcp-cli-1.research.md  mcp-server-implementation-1.0.research.md  transport-configuration-research.md  wheel-installation-1.0.research.md
.github/workflows/: image.yml  package.yml  publish.yml  pull_request.yml  test.yml
duplocloud/mcp/: __main__.py  app.py  args.py  compact_tools.py  config_display.py  ctx.py  server.py  tools.py  utils.py
scripts/: devcontainer.sh  init.sh
tests/: conftest.py  test_args.py  test_ctx.py  test_custom.py  test_filters.py  test_modes.py  test_server.py  test_tools.py
