[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duplocloud-mcp"
description = "Model Context Protocol (MCP) server for DuploCloud."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10.0"
keywords = ["duplocloud", "mcp", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
authors = [{ name = "DuploCloud", email = "support@duplocloud.net" }]
maintainers = [{ name = "DuploCloud", email = "support@duplocloud.net" }]
dependencies = [
  "fastmcp",
  "jinja2",
  # "duplocloud-client>=0.3.0",
  "duplocloud-client @ git+https://github.com/duplocloud/duploctl.git@mcp-refactor",
]
[project.optional-dependencies]
build = [
  "invoke",
  "setuptools_scm",
  "build",
  "wheel",
  "twine",
  "pyinstaller",
  "toml",
  "semver",
]
test = [
  "pytest",
  "ruff",
  "pip-audit",
  "pytest-black",
  "pytest-isort",
  "pytest-cov",
  "pytest-dependency",
  "pytest-order",
  "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/duplocloud/mcp"
Issues = "https://github.com/duplocloud/mcp/issues"

[project.scripts]
duplocloud-mcp = "duplocloud.mcp.__main__:main"

[tool.setuptools]
packages = ["duplocloud.mcp"]
