[project]
name = "duplocloud-mcp"
description = "Model Context Protocol (MCP) server for DuploCloud."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.10.0"
keywords = ["duplocloud", "mcp", "ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
authors = [{ name = "DuploCloud", email = "support@duplocloud.net" }]
maintainers = [{ name = "DuploCloud", email = "support@duplocloud.net" }]
dependencies = [
  "fastmcp>=2.14.0,<4",
  "authlib>=1.6.6",
  "jinja2",
  "duplocloud-client @ git+https://github.com/duplocloud/duploctl.git@main",
]
[project.optional-dependencies]
build = [
  "invoke",
  "setuptools_scm",
  "build",
  "wheel>=0.46.2",
  "twine",
  "pyinstaller",
  "toml",
  "semver",
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/duplocloud/mcp"
Issues = "https://github.com/duplocloud/mcp/issues"

[project.scripts]
duplocloud-mcp = "duplocloud.mcp.__main__:main"

[tool.setuptools]
packages = ["duplocloud.mcp"]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
addopts = "--verbose"
testpaths = ["tests"]
markers = [
  "unit: mark a test as a unit test",
  "integration: mark a test as an integration test",
]
